fix: 🐛 tree event and collapse ui (#69)

--- a/packages/ui/collapse/collapse-item.module.css
+++ b/packages/ui/collapse/collapse-item.module.css
@@ -15,7 +15,7 @@
 }
 .prefix {
     flex: none;
-    margin-right: var(--spacing-sm);
+    margin-right: var(--spacing-10);
 }
 .extra {
     flex: none;
